Basically revamped everything

--- a/index.html
+++ b/index.html
@@ -1,26 +1,137 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>rat in a bucket</title>
-        <meta name="description" content="rat in a bucket new orleans grindcore">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <div class="high-contrast-light">
-            <img src="img/logo.png" alt="band logo"/>
+<!doctype html>
+<!--[if lt ie 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if ie 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if ie 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt ie 8]>      <html class="no-js"> <![endif]-->
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>rat in a bucket</title>
+    <meta name="description" content="rat in a bucket new orleans grindcore">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=roboto+mono:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=roboto+mono:wght@100;300;400;700&family=roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <!--[if lt ie 7]>
+    <p class="browsehappy">you are using an <strong>outdated</strong> browser. please <a href="#">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+    <div class="wrapper">
+      <header id="home">
+        <img src="img/logo.png" alt="Band logo"/>
+        <h1>new orleans grindcore</h1>
+        <nav>
+            <h3><a href="#home">home</a></h3>
+            <h3><a href="#news">news</a></h3>
+            <h3><a href="sights/index.html">sights</a></h3>
+            <h3><a href="#sounds">sounds</a></h3>
+            <h3><a href="#merch">merch</a></h3>
+            <h3><a href="#contact">contact</a></h3>
+        </nav>
+      </header>
+
+      <div class="members" id="members">
+        <p>ramon: guitar, vocals</p>
+      </div>
+      <div class="members">
+        <p>keith: drums, vocals</p>
+      </div>
+      <div class="members">
+        <p>shaun: vocals</p>
+      </div>
+      <div class="members">
+        <p>troy: bass</p>
+      </div>
+      <article id="news">
+        <h2>news</h2>
+        <div>
+          <h3>11/8/2005</h3>
+          <p>It takes a hurricane to destroy a band. That is exactly what it takes. I'm no longer going to presume to speak for the band's behalf. I'll just say that we had to end the band because of Katrina. Keith, Shaun, and Troy are alive and well.  Keith has taken over and been communicating through our myspace.com page. Instead of making any drastic changes, I've decided to leave the website as it was before the storm - except for this message. I'm leaving it up to the rest of the guys to leave whatever legacy they may choose to leave in cyberspace. Everything else I have to say can be found <a href="#" target="_blank">here</a>.  It's been fun, folks.</p>
+          <p>- Ramon</p>
+          <p>rat in a bucket: 2000-2005</p>
         </div>
-        <div class="high-contrast-dark">
-            
+        <div>
+          <h3>7/26/2005</h3>
+          <p>our apologies to anyone who came to see us in monroe on saturday.  our van unfortunately broke down on the interstate, just 45 minutes into the trip.  we will soon be in the market for a new van. in the interim, we still have our trailer, so we are still playing the banks street on the 28th. we still plan to hook up with <a href="http://www.myspace.com/botis">botis</a> in monroe, many thanks go to those guys for hooking us up in the first place.</p>
+          <p>as of today, according to internet statistics, americans account for 88.7 % of the visitors of ratinabucket.com.  only 0.4 % of visitors originate from belgium.  come on belgium; you're not even <em>trying</em>.</p>
         </div>
-    </body>
+        <div>
+          <h3>7/2/2005</h3>
+          <p>unfortunately, for reasons we can't say right now, we had to drop out of the july 9<sup>th</sup> show. however, this is a benefit show for dave schweitzer, who died last month as the result of a motorcycle accident. we suggest everybody go out there to help support dave's family. here's the details:</p>          
+          <p>dave's benefit show: <a href="http://www.hawgjaw.com">hawg jaw</a>, <u>suplecs</u>, <u>daisy</u>, and <u>the red beards</u><br> saturday, july 9<sup>th</sup> @ the dixie tavern. 9 p.m., $5 cover.</p>
+          <p>we will be playing in monroe, la later this month. more info will be posted as soon as it is available.</p>
+        </div>            
+        <div>
+          <h3>6/12/2005</h3>
+          <p>okay, the computer is back working with a brand new power supply, not a moment too soon. spickle has apparently dropped out of the earbleed festival, and is replaced by <a href="http://www.killtheclient.net">kill the client</a>. also, <a href="http://www.hawgjaw.com/">hawg jaw</a> is now entering the fracas. this is not exactly official, but it's from a source as good as any, because i don't think there is an official source for the earbleed fest. thanks to everyone who popped up for the last few shows; if they weren't financially lucrative, then at least we played very well, if i may say so myself.</p>
+          <p>and dammit, i <em>may</em>.</p>
+        </div>
+        <div>
+          <h3>4/27/2005</h3>
+          <p>correction...we're playing the earbleed festival this year @ the dixie tavern with eyehategod, polecat boogie revival, spickle, and serious injury...friday, june 24th. no info yet on the time or price for admission. this information will be posted as soon as i have it. until then, please enjoy <a href="http://cheston.com/pbf/archive.html"> this depraved web comic</a>.</p>
+        </div>
+        <div>
+          <h3>4/17/2005</h3>
+          <p>2 shows set up at the banks street warehouse. are you ready to <a href="http://cookiethievery.com/hxc/">rock</a>?</p>
+        </div>
+        <div>
+          <h3>4/13/2005</h3>
+          <p>right now, we're in the process of getting back into the swing of things after one of us had minor surgery.i won't say who, so you'll have to guess.you have a 25% chance (or probability of 1:4) of getting it correct on the first guess, which are pretty decent odds, if you ask us, especially if you don't know what the hell we're talking about. the probability of knowing what the hell we're talking about is probably 1:30.  the probability of that figure being accurate is anyone's guess.</p>
+          <p>so we'll be ready to start doing shows pretty darn soon. we'll try to keep shows posted as soon as they are scheduled.</p>
+          <p>those of you who <a href="mailto:band@ratinabucket.com">write us</a> will notice that you will immediately receive an automated response letter. we've received numerous requests from all sorts of bands asking us to help them book a show in new orleans. some of these e-mails seem like they're from bands who really need help. others seem like they are from shitty indie rock bands from the midwest who sent out spam to everyone with an e-mail address. we would like to be able to help out any band that needs it; the problem is that we usually don't book shows ourselves, and when somebody asks us for help, we usually send off the same information each time. to eliminate hassle on our part (and to weed out the dickhead spammers who don't even know what we sound like) we have set up an auto-response which contains links to new orleans promoters, courtesy of <a href="http://noladiy.org">noladiy.org</a>.</p>
+          <p>please don't let this throw you off. <u>we read all e-mail we receive</u>, and answer any questions folks have. we just figured that if a band needs a kick in the right direction in trying to book a show, they should use the same resources we do. if you have a question/comment besides help with booking, we will respond; and in so doing, will provide an alternate e-mail address so you don't continue to receive the same auto-response each time you reply. hopefully, this will solve problems on everybody's part, and we can continue to live in peace and harmony, forever and ever.until the <a href="http://www.shaunofthedead.co.uk/">zombies</a> come to eat our brains.</p>
+        </div>
+      </article>
+      <div id="sounds">
+        <h2>sounds</h2>
+        <div>
+            <ul>
+                <li><a href="http://www.isound.com/rat_in_a_bucket">isound.com</a></li>
+                <li><a href="http://www.neworleansbands.net/jam_room/bands/349/index.php">neworleansbands.net</a></li>
+                <li><a href="http://www.myspace.com/ratinabucket">myspace.com</a></li>
+            </ul>
+        </div>
+      </div>
+      <div id="merch">
+        <h2>merch</h2>
+        <div>
+          <h3>the cd's:</h3>
+          <p>there are only a few copies of our second cd left.  6 songs available at $4 each; recorded at <a href="http://www.thelivingroomstudio.com"> the living room</a> by chris george.</p>
+          <p>track listing:</p>
+          <ol>
+            <li>a perfect pass</li>
+            <li>stray dog</li>
+            <li>hellbedeydo nwanme</li>
+            <li>better days</li>
+            <li>lonesome fool</li>
+            <li>old sorrow</li>
+          </ol>
+          <p>our new cd <em>ugliness and failure</em> is available at our shows.</p>
+          <a href="img/ugliness_and_failure.jpg" target="_blank"><img src="img/ugliness_and_failure_t.jpg" alt="album cover"></a>
+          <p>track listing:</p>
+          <ol>
+            <li>capsized</li>
+            <li>i'll feed you shit</li>
+            <li>omicron red</li>
+            <li>sealing the ring</li>
+            <li>silent</li>
+            <li>beating the path</li>
+          </ol>
+        </div>
+        <div>
+          <h3>the shirt:</h3>
+          <p>$7 each. sizes available: small (purple), medium (black, green) and large (red, grey, black).  xl are out.</p>
+          <a href="img/shirts.jpg"  target="_blank"><img src="img/shirts_t.jpg" alt="picture of t-shirts"/></a>
+          <p>new shirt and sticker designs are also available, but i have no pictures of them at the moment.</p>
+          <p> for right now, if you want a cd or shirt, you can catch us at a show, or <a href="mailto:band@ratinabucket.com"> e-mail us</a> and let us know what you want. we may eventually post a mail order form, or some kind of snazzy online order script, or something like that, but don't count on it happening anytime soon, bubba.</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
