--- a/index.html
+++ b/index.html
@@ -33,21 +33,22 @@
             <h3><a href="#merch">merch</a></h3>
         </nav>
       </header>
-
-      <div class="members" id="members">
-        <p>ramon: guitar, vocals</p>
-      </div>
-      <div class="members">
-        <p>keith: drums, vocals</p>
-      </div>
-      <div class="members">
-        <p>shaun: vocals</p>
-      </div>
-      <div class="members">
-        <p>troy: bass</p>
-      </div>
+      <section class="members"id="members">
+        <div>
+          <p>ramon: guitar, vocals</p>
+        </div>
+        <div>
+          <p>keith: drums, vocals</p>
+        </div>
+        <div>
+          <p>shaun: vocals</p>
+        </div>
+        <div>
+          <p>troy: bass</p>
+        </div>
+      </section>
+      <h2>news</h2>
       <article id="news">
-        <h2>news</h2>
         <div>
           <h3>11/8/2005</h3>
           <p>It takes a hurricane to destroy a band. That is exactly what it takes. I'm no longer going to presume to speak for the band's behalf. I'll just say that we had to end the band because of Katrina. Keith, Shaun, and Troy are alive and well.  Keith has taken over and been communicating through our myspace.com page. Instead of making any drastic changes, I've decided to leave the website as it was before the storm - except for this message. I'm leaving it up to the rest of the guys to leave whatever legacy they may choose to leave in cyberspace. Everything else I have to say can be found <a href="#" target="_blank">here</a>.  It's been fun, folks.</p>
@@ -94,177 +95,177 @@
           <!-- Full-width images with number and caption text -->
           <div class="mySlides fade">
             <div class="numbertext">1 / 36</div>
-            <img src="pic/01.jpg" style="width:100%">
+            <img src="pic/01.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">2 / 36</div>
-            <img src="pic/02.jpg" style="width:100%">
+            <img src="pic/02.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">3 / 36</div>
-            <img src="pic/03.jpg" style="width:100%">
+            <img src="pic/03.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">4 / 36</div>
-            <img src="pic/04.jpg" style="width:100%">
+            <img src="pic/04.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">5 / 36</div>
-            <img src="pic/05.jpg" style="width:100%">
+            <img src="pic/05.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">6 / 36</div>
-            <img src="pic/06.jpg" style="width:100%">
+            <img src="pic/06.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">7 / 36</div>
-            <img src="pic/07.jpg" style="width:100%">
+            <img src="pic/07.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">8 / 36</div>
-            <img src="pic/08.jpg" style="width:100%">
+            <img src="pic/08.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">9 / 36</div>
-            <img src="pic/09.jpg" style="width:100%">
+            <img src="pic/09.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">10 / 36</div>
-            <img src="pic/10.jpg" style="width:100%">
+            <img src="pic/10.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">11 / 36</div>
-            <img src="pic/11.jpg" style="width:100%">
+            <img src="pic/11.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">12 / 36</div>
-            <img src="pic/12.jpg" style="width:100%">
+            <img src="pic/12.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">13 / 36</div>
-            <img src="pic/13.jpg" style="width:100%">
+            <img src="pic/13.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">14 / 36</div>
-            <img src="pic/14.jpg" style="width:100%">
+            <img src="pic/14.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">15 / 36</div>
-            <img src="pic/15.jpg" style="width:100%">
+            <img src="pic/15.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">16 / 36</div>
-            <img src="pic/16.jpg" style="width:100%">
+            <img src="pic/16.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">17 / 36</div>
-            <img src="pic/17.jpg" style="width:100%">
+            <img src="pic/17.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">18 / 36</div>
-            <img src="pic/18.jpg" style="width:100%">
+            <img src="pic/18.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">19 / 36</div>
-            <img src="pic/19.jpg" style="width:100%">
+            <img src="pic/19.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">20 / 36</div>
-            <img src="pic/20.jpg" style="width:100%">
+            <img src="pic/20.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">21 / 36</div>
-            <img src="pic/21.jpg" style="width:100%">
+            <img src="pic/21.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">22 / 36</div>
-            <img src="pic/22.jpg" style="width:100%">
+            <img src="pic/22.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">23 / 36</div>
-            <img src="pic/23.jpg" style="width:100%">
+            <img src="pic/23.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">24 / 36</div>
-            <img src="pic/24.jpg" style="width:100%">
+            <img src="pic/24.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">25 / 36</div>
-            <img src="pic/25.jpg" style="width:100%">
+            <img src="pic/25.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">26 / 36</div>
-            <img src="pic/26.jpg" style="width:100%">
+            <img src="pic/26.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">27 / 36</div>
-            <img src="pic/27.jpg" style="width:100%">
+            <img src="pic/27.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">28 / 36</div>
-            <img src="pic/28.jpg" style="width:100%">
+            <img src="pic/28.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">29 / 36</div>
-            <img src="pic/29.jpg" style="width:100%">
+            <img src="pic/29.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">30 / 36</div>
-            <img src="pic/30.jpg" style="width:100%">
+            <img src="pic/30.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">31 / 36</div>
-            <img src="pic/31.jpg" style="width:100%">
+            <img src="pic/31.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">32 / 36</div>
-            <img src="pic/32.jpg" style="width:100%">
+            <img src="pic/32.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">33 / 36</div>
-            <img src="pic/33.jpg" style="width:100%">
+            <img src="pic/33.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">34 / 36</div>
-            <img src="pic/34.jpg" style="width:100%">
+            <img src="pic/34.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">35 / 36</div>
-            <img src="pic/35.jpg" style="width:100%">
+            <img src="pic/35.jpg" style="width:650px">
           </div>
 
           <div class="mySlides fade">
