Adjusted merch class, added 1800px+ breakpoint

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </article>
       <div class="sights" id="sights">
-        <h1>sights</h1>
+        <h2>sights</h2>
                 <!-- Slideshow container -->
         <div class="slideshow-container">
 
@@ -318,13 +318,13 @@
       </div>
       <div id="merch">
         <h2>merch</h2>
-        <section>
-          <div>
+        <section id="cds">
+          <div class="merch-old-cd">
             <h3>the cd's:</h3>
             <p>there are only a few copies of our second cd left.  6 songs available at $4 each; recorded at <a href="http://www.thelivingroomstudio.com"> the living room</a> by chris george.</p>
-            <p>track listing:</p>
           </div>
           <div>
+            <p>track listing:</p>
             <ol>
               <li>a perfect pass</li>
               <li>stray dog</li>
@@ -334,8 +334,8 @@
               <li>old sorrow</li>
             </ol>
           </div>
-          <p>our new cd <em>ugliness and failure</em> is available at our shows.</p>
           <div class="merch-new-cd">
+            <p>our new cd <em>ugliness and failure</em> is available at our shows.</p>
             <div>
               <a href="img/ugliness_and_failure.jpg" target="_blank"><img src="img/ugliness_and_failure_t.jpg" alt="album cover"></a>
             </div>
@@ -352,7 +352,7 @@
             </div>
           </div>
         </section>
-        <section>
+        <section id="shirt">
           <h3>the shirt:</h3>
           <div class="merch-t-shirt">
             <a href="img/shirts.jpg"  target="_blank"><img src="img/shirts_t.jpg" alt="picture of t-shirts"/></a>
